--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.17.2",
     "@electron-forge/cli": "^6.0.0-beta.63",
     "@electron-forge/maker-deb": "^6.0.0-beta.63",
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
@@ -70,6 +71,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.0.0",
     "electron": "17.0.0",
     "node-loader": "^2.0.0",
@@ -82,6 +84,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
+    "sharp": "^0.30.1",
     "throttle-debounce": "^3.0.1"
   }
 }
