--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "webpack": "^5.68.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
