--- a/package.json
+++ b/package.json
@@ -83,9 +83,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@svgdotjs/svg.js": "^3.1.2",
     "copy-webpack-plugin": "^10.2.4",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
+    "is-svg": "^4.3.2",
     "sharp": "^0.30.1",
     "throttle-debounce": "^3.0.1"
   }
