--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.0.0",
+    "svg-loader": "^0.0.2",
     "webpack": "^5.68.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@material-design-icons/svg": "^0.10.6",
     "@svgdotjs/svg.js": "^3.1.2",
     "copy-webpack-plugin": "^10.2.4",
     "deepmerge": "^4.2.2",
