--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "is-svg": "^4.3.2",
     "sharp": "^0.30.1",
+    "simple-icons": "^6.11.0",
     "throttle-debounce": "^3.0.1"
   }
 }
