--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "css-loader": "^6.0.0",
     "electron": "17.0.0",
     "node-loader": "^2.0.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.49.9",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.0.0",
     "svg-loader": "^0.0.2",
@@ -45,6 +45,7 @@
   "dependencies": {
     "@material-design-icons/svg": "^0.10.6",
     "@svgdotjs/svg.js": "^3.1.2",
+    "choices.js": "^10.1.0",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
     "is-svg": "^4.3.2",
