--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
     "is-svg": "^4.3.2",
+    "mime-types": "^2.1.34",
     "sharp": "^0.30.1",
     "simple-icons": "^6.11.0",
     "throttle-debounce": "^3.0.1"
