--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
-    "@electron-forge/cli": "^6.0.0-beta.63",
-    "@electron-forge/maker-deb": "^6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
-    "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.63",
+    "@electron-forge/cli": "6.0.0-beta.63",
+    "@electron-forge/maker-deb": "6.0.0-beta.63",
+    "@electron-forge/maker-rpm": "6.0.0-beta.63",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.63",
+    "@electron-forge/maker-zip": "6.0.0-beta.63",
+    "@electron-forge/plugin-auto-unpack-natives": "6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "babel-loader": "^8.2.3",
@@ -47,6 +47,7 @@
     "@svgdotjs/svg.js": "^3.1.2",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
+    "is-plain-object": "^5.0.0",
     "is-svg": "^4.3.2",
     "mime-types": "^2.1.34",
     "sharp": "^0.30.1",
