--- a/package.json
+++ b/package.json
@@ -22,35 +22,35 @@
     "forge": "./forge.config.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@electron-forge/cli": "6.0.0-beta.63",
-    "@electron-forge/maker-deb": "6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.63",
-    "@electron-forge/maker-zip": "6.0.0-beta.63",
-    "@electron-forge/plugin-auto-unpack-natives": "6.0.0-beta.63",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.63",
+    "@babel/core": "^7.28.4",
+    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-rpm": "^7.9.0",
+    "@electron-forge/maker-squirrel": "^7.9.0",
+    "@electron-forge/maker-zip": "^7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+    "@electron-forge/plugin-webpack": "^7.9.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.0.0",
-    "electron": "17.0.0",
-    "node-loader": "^2.0.0",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.0.0",
+    "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
+    "electron": "^38.1.2",
+    "node-loader": "^2.1.0",
+    "sass": "^1.93.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "svg-loader": "^0.0.2",
-    "webpack": "^5.68.0"
+    "webpack": "^5.101.3"
   },
   "dependencies": {
-    "@material-design-icons/svg": "^0.10.6",
+    "@material-design-icons/svg": "^0.14.15",
     "@svgdotjs/svg.js": "^3.1.2",
     "deepmerge": "^4.2.2",
     "electron-squirrel-startup": "^1.0.0",
     "is-plain-object": "^5.0.0",
     "is-svg": "^4.3.2",
     "mime-types": "^2.1.34",
-    "sharp": "^0.30.1",
+    "sharp": "^0.34.4",
     "simple-icons": "^6.11.0",
     "throttle-debounce": "^3.0.1"
   }
