--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "electron-squirrel-startup": "^1.0.0",
     "is-plain-object": "^5.0.0",
     "is-svg": "^4.3.2",
+    "js-convert-case": "^4.2.0",
     "mime-types": "^2.1.34",
     "sharp": "^0.34.4",
     "simple-icons": "^6.11.0",
-    "throttle-debounce": "^3.0.1"
+    "throttle-debounce": "^3.0.1",
+    "tinycolor2": "^1.6.0"
   }
 }
