--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,19 +26,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Package (make)
-        run: npm run make
+        run: yarn make
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish (GitHub Release)
         if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
-        run: npm run publish -- --target=github
+        run: yarn publish --target=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
