--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,74 +7,34 @@ on:
 
 jobs:
   build-and-publish:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.ver.outputs.version }}
+      tag: ${{ steps.ver.outputs.tag }}
     permissions:
       contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Version guard (ensure tag matches package.json)
+      - name: Extract tag version
+        id: ver
         run: |
-          if [ "${GITHUB_REF}" = "" ] || [[ ! "${GITHUB_REF}" =~ refs/tags/ ]]; then
-            echo "::error::Version guard ran without a tag ref (unexpected)."; exit 1;
-          fi
-          if [ ! -f package.json ]; then echo "::error::package.json missing"; exit 1; fi
-          PKG_VERSION=$(node -p "require('./package.json').version") || { echo "::error::Failed to read version from package.json"; exit 1; }
+          if [ -z "${GITHUB_REF}" ] || [[ ! "${GITHUB_REF}" =~ refs/tags/ ]]; then
+            echo "::error::No tag ref found"; exit 1; fi
           TAG=${GITHUB_REF#refs/tags/}
-          TAG_VERSION=${TAG#v}
-          echo "Tag ref:        ${GITHUB_REF}"
-          echo "Tag name:       ${TAG}"
-          echo "Tag version:    ${TAG_VERSION}"
-          echo "package.json:   ${PKG_VERSION}"
-          if [ "${PKG_VERSION}" != "${TAG_VERSION}" ]; then
-            echo "::error::Version mismatch: package.json=${PKG_VERSION} tag=${TAG_VERSION}"; exit 1;
-          fi
-          if [[ "${TAG_VERSION}" == *-* ]]; then
-            echo "is_prerelease=true" >> $GITHUB_ENV
-          else
-            echo "is_prerelease=false" >> $GITHUB_ENV
-          fi
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "version=${TAG#v}" >> $GITHUB_OUTPUT
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Package (make)
-        run: yarn make
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish (GitHub Release)
-        # Restrict publishing to tag pushes only; prevents accidental release attempts on main merges.
-        if: startsWith(github.ref, 'refs/tags/')
-        # Run electron-forge publish; no explicit --target needed because publishers are defined in forge.config.js
-        run: yarn run publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload artifacts (dist)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: forge-out-${{ matrix.os }}
-          path: out/
-          if-no-files-found: warn
+  call-reusable:
+    needs: build-and-publish
+    uses: ./.github/workflows/reusable-build-publish.yml
+    with:
+      version: ${{ needs.build-and-publish.outputs.version }}
+      ref: ${{ needs.build-and-publish.outputs.tag }}
+      os: '["ubuntu-latest","windows-latest"]'
+    secrets: inherit
 
   promote-release:
     name: Promote Release (stable / rc)
-    needs: build-and-publish
+    needs: call-reusable
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
