ci(reusable): force bash shell for all run steps to fix Windows ParserError in version guard

--- a/.github/workflows/reusable-build-publish.yml
+++ b/.github/workflows/reusable-build-publish.yml
@@ -21,6 +21,9 @@ on:
 jobs:
   build-and-publish:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
     strategy:
       fail-fast: false
       matrix:
